src/App.css
html,
body,
.root {
  height: 100%;
}
body {
  line-height: 1.5;
}
body,
.app {
  background: white;
}
a {
  text-decoration: none;
}

/* main page */

.list-books {
  height: 100vh;
  overflow: hidden;
}

.list-books-title {
  padding: 10px 0;
  background: #2e7c31;
  text-align: center;
}
.list-books-title h1 {
  font-weight: 400;
  margin: 0;
  color: white;
}

.list-books-content {
  height: 100%;
  overflow: scroll;
  padding: 0 0 80px;
  flex: 1;
}

.bookshelf {
  padding: 0 10px 20px;
}

@media (min-width: 600px) {
  .bookshelf {
    padding: 0 20px 40px;
  }
}

.bookshelf-title {
  border-bottom: 1px solid #dedede;
}
.bookshelf-books {
  text-align: center;
}

.open-search {
  position: fixed;
  right: 25px;
  bottom: 25px;
}
.open-search a {
  display: block;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: #2e7d32;
  background-image: url('./icons/add.svg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 28px;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  font-size: 0;
}

/* search page */

.search-books-bar {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 5;
  display: flex;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 0 6px rgba(0, 0, 0, 0.23);
}
.search-books-input-wrapper {
  flex: 1;
  background: #e9e;
}
.search-books-bar input {
  width: 100%;
  padding: 15px 10px;
  font-size: 1.25em;
  border: none;
  outline: none;
}

.close-search {
  display: block;
  top: 20px;
  left: 15px;
  width: 50px;
  height: 53px;
  background: white;
  background-image: url('./icons/arrow-back.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: 28px;
  font-size: 0;
}

.search-books-results {
  height: 100vh;
  overflow: scroll;
  padding: 27px 10px 0 20px;
  margin-top: 53px;
}

/* books grid */

.books-grid {
  list-style-type: none;
  padding: 0;
  margin: 0;

  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.books-grid li {
  padding: 10px 15px;
  text-align: left;
}

.book {
  width: 140px;
}
.book-title,
.book-authors {
  font-size: 0.8em;
}
.book-title {
  margin-top: 10px;
}
.book-authors {
  color: #999;
}

.book-top {
  position: relative;
  align-self: flex-start;
  height: 200px;
  width: 140px;
  display: flex;
  align-items: flex-end;
  flex-shrink: 0;
}

.book-shelf-changer {
  position: absolute;
  right: 0;
  bottom: -10px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: #60ac5d;
  background-image: url('./icons/arrow-drop-down.svg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 20px;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}
.book-shelf-changer select {
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

/* book cover */

.book-cover {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  background: #eee;
  background-size: cover;
}
.book-cover-title {
  padding: 20px 10px 0;
  text-align: center;
  font-size: 0.8em;
}

/* book details */

.book-details {
  position: relative;
  z-index: 10;
  height: 100vh;
  background: white;
}

.book-details-content {
  display: flex;
  flex-direction: column;
  padding: 30px;
  width: 100%;
  margin: auto;
}

@media (min-width: 600px) {
  .book-details-content {
    max-width: 800px;
    padding: 50px;
    flex-direction: row;
  }
}

.book-details .book-top {
  align-self: center;
}

@media (min-width: 600px) {
  .book-details .book-top {
    align-self: flex-start;
  }
}

.book-details-info {
  display: flex;
  flex-direction: column;
  padding-top: 30px;
}

@media (min-width: 600px) {
  .book-details-info {
    padding: 0 30px;
  }
}

.book-details-info-title {
  font-weight: 700;
  font-size: 1.2em;
}

.book-details-info-detail {
  font-size: 0.9em;
  color: #555;
}

.book-details-info-description {
  margin-top: 1rem;
}

.book-details-close-btn {
  position: absolute;
  display: block;
  top: 20px;
  right: 10px;
  width: 50px;
  height: 53px;
  padding: 20px;
  background: white;
  background-image: url('./icons/close.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: 28px;
  font-size: 0;
  border: none;
}

@media (min-width: 600px) {
  .book-details-close-btn {
    top: 50px;
    right: 50px;
  }
}

/* Page transitions */

.page-enter,
.page-exit {
  position: absolute; /* Prevent jumping on transition */
  width: 100vw;
}

.page-enter {
  opacity: 0.3; /* Every page fades in */
}

.list-books.page-enter.page-enter-active,
.search-books.page-enter.page-enter-active,
.book-details.page-enter.page-enter-active {
  transform: none; /* And has a custom transform animation  */
  opacity: 1;
  transition: transform 200ms cubic-bezier(0.85, 0.1, 0.15, 0.9),
    opacity 200ms ease-out;
}

.page-exit.page-exit-active {
  opacity: 0;
  transition: transform 200ms cubic-bezier(0.85, 0.1, 0.15, 0.9),
    opacity 200ms ease-in;
}

/* Start page */
.list-books.page-enter,
.list-books.page-exit.page-exit-active {
  transform: translateX(-100vw); /* Slide in-out from the left */
}

/* Search page */
.search-books.page-enter,
.search-books.page-exit.page-exit-active {
  transform: translateX(100vw); /* Slide in-out from the right */
}

/* Details page */
.book-details.page-enter {
  transform: translateY(-5vh); /* Enter from above */
  opacity: 0;
}
.book-details.page-exit.page-exit-active {
  transform: translateY(20vh); /* Exit to the bottom */
}

.book-details.page-enter.page-enter-active {
  transition: transform 200ms ease-out, opacity 200ms ease-out;
}

.book-details.page-exit.page-exit-active {
  transition: transform 200ms ease-in, opacity 200ms ease-in;
}

/* CSS Spinner
 * Provided by Tobias Ahlin
 * https://github.com/tobiasahlin/SpinKit
 */

.sk-circle {
  margin: 100px auto;
  width: 40px;
  height: 40px;
  position: relative;
}
.sk-circle .sk-child {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}
.sk-circle .sk-child:before {
  content: '';
  display: block;
  margin: 0 auto;
  width: 15%;
  height: 15%;
  background-color: #333;
  border-radius: 100%;
  -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
  animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
}
.sk-circle .sk-circle2 {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg);
}
.sk-circle .sk-circle3 {
  -webkit-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}
.sk-circle .sk-circle4 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}
.sk-circle .sk-circle5 {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}
.sk-circle .sk-circle6 {
  -webkit-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  transform: rotate(150deg);
}
.sk-circle .sk-circle7 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}
.sk-circle .sk-circle8 {
  -webkit-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  transform: rotate(210deg);
}
.sk-circle .sk-circle9 {
  -webkit-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}
.sk-circle .sk-circle10 {
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}
.sk-circle .sk-circle11 {
  -webkit-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}
.sk-circle .sk-circle12 {
  -webkit-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  transform: rotate(330deg);
}
.sk-circle .sk-circle2:before {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}
.sk-circle .sk-circle3:before {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}
.sk-circle .sk-circle4:before {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}
.sk-circle .sk-circle5:before {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}
.sk-circle .sk-circle6:before {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}
.sk-circle .sk-circle7:before {
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}
.sk-circle .sk-circle8:before {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}
.sk-circle .sk-circle9:before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}
.sk-circle .sk-circle10:before {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}
.sk-circle .sk-circle11:before {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}
.sk-circle .sk-circle12:before {
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

@-webkit-keyframes sk-circleBounceDelay {
  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes sk-circleBounceDelay {
  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

